[project]
name = "diplomacy-ndai-zone-server"
version = "0.1.0"
description = "Standalone NDAI Tinfoil server for Diplomacy negotiations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-diplomacy @ git+https://github.com/enricobottazzi/AI_Diplomacy.git@feat_server",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 150
